--- a/.storybook/tokens/colors.mdx
+++ b/.storybook/tokens/colors.mdx
@@ -8,7 +8,7 @@ export const fullConfig = resolveConfig(tailwindConfig);
 
 # Color System
 
-## Functional Colors
+# Functional Colors
 
 <ColorPalette>
   {Object.entries(fullConfig.theme.colors)
