--- a/src/stories/tokens/colors.mdx
+++ b/src/stories/tokens/colors.mdx
@@ -1,6 +1,6 @@
 import { ColorItem, ColorPalette, Meta } from "@storybook/addon-docs";
 import resolveConfig from "tailwindcss/resolveConfig";
-import tailwindConfig from "../../tailwind.config.ts";
+import tailwindConfig from "../../../tailwind.config.ts";
 
 export const fullConfig = resolveConfig(tailwindConfig);
 
